# arrays

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md
src/: Arrays.ml  Clonecheck.ml  Clonecheck1.ml  Cnotcheck.ml  Detcons.ml  Elab.ml  LambdaQs.cf  Makefile  QSharp.cf  README.md  Run_clonecheck.ml  Run_elab.ml  SampleLQSProgs.ml  dune
src/examples/: Arrayslite.qs  BadExample.qs  BenchmarkExample.qs  IfTester.qs  ImpureClassicalExample.qs  TyVarLambdaTest.qs  tests.txt  translated-benchmark.lqs
src/examples/Arrays/: Deprecated.qs  EqualA.qs
src/z3tests/: Mostrestz31.ml  mostrestmodel1.smt2  z3test1.smt2
